--- a/main.html
+++ b/main.html
@@ -4,7 +4,9 @@
         <title> </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link href="../resources/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
+        <link href="../resources/fontawesome/css/fontawesome.min.css" type="text/css" rel="stylesheet"/>
         <link href="../resources/bootstrap/css/bootstrap-responsive.css" type="text/css" rel="stylesheet"/>
+        <link href="../resources/css/typo.css" type="text/css" rel="stylesheet"/>
         <link href="../resources/css/docs.css" type="text/css" rel="stylesheet"/>
         <link href="../resources/css/docs-cn.css" type="text/css" rel="stylesheet"/>
         <link href="../resources/google-code-prettify/prettify.css" type="text/css" rel="stylesheet"/>
