--- a/tests/jsrender.html
+++ b/tests/jsrender.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="../resources/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
     <link href="../resources/bootstrap/css/bootstrap-responsive.css" type="text/css" rel="stylesheet"/>
-    <link href="../resouces/css/docs.css" type="text/css" rel="stylesheet"/>
+    <link href="../resources/css/docs.css" type="text/css" rel="stylesheet"/>
     <link href="../resources/css/docs-cn.css" type="text/css" rel="stylesheet"/>
     <link href="../resources/google-code-prettify/prettify.css" type="text/css" rel="stylesheet"/>
     <script src="../resources/jquery/jquery.js" type="text/javascript"></script>
@@ -113,8 +113,8 @@
     });
     $("#addressForm").on("click", ".icon-minus", function () {
         $.observable(addressArray).remove($.view(this).index, 1);
-        //var json = $('#my-form').serializeObject();
-        //alert(JSON.stringify(json.people));
+        var json = $('#addressForm').form2json();
+        alert(JSON.stringify(json));
         return false;
     });
 
