--- a/tests/edit-label.html
+++ b/tests/edit-label.html
@@ -5,7 +5,7 @@
     <base href="http://localhost/socialcapital/">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="./resources/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
-    <link href="../resources/fontawesome/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
+    <link href="./resources/fontawesome/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
     <link href="./resources/bootstrap/css/bootstrap-responsive.css" type="text/css" rel="stylesheet"/>
     <link href="./resources/css/docs.css" type="text/css" rel="stylesheet"/>
     <link href="./resources/css/docs-cn.css" type="text/css" rel="stylesheet"/>
@@ -31,7 +31,12 @@
 <body>
 <div class="input-append">
     <input class="span2" id="appendedInput" type="text">
-    <span class="add-on"><i class="icon-camera-retro"></i></span>
+    <span class="add-on">
+        <i class="icon-double-angle-down">
+
+
+        </i>
+    </span>
 
 </div>
 <select name="try_me" class="dk" tabindex="1">
